<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp" 
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
        <TextView
            android:id="@+id/oilConsumption_title"
		    android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_centerVertical="true"
		    android:text="@string/oilConsumption_title"/>
        <TextView 
		    android:id="@+id/oilConsumption"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_toRightOf="@+id/oilConsumption_title"/>
    </RelativeLayout>
    
	<RelativeLayout
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/current_distance_title"
		    android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_centerVertical="true"
		    android:text="@string/current_distance_title"/>
       <TextView 
		    android:id="@+id/current_distance"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_toRightOf="@+id/current_distance_title"/>
    </RelativeLayout>
    
	<RelativeLayout
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/per_kilo_charge_title"
		    android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_centerVertical="true"
		    android:text="@string/per_kilo_charge_title"/>
        <TextView 
		    android:id="@+id/per_kilo_charge" 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_toRightOf="@+id/per_kilo_charge_title"/>
    </RelativeLayout>
    
	<RelativeLayout
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/daily_distance_title"
		    android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_centerVertical="true"
		    android:text="@string/daily_distance_title"/>
        <TextView 
		    android:id="@+id/daily_distance" 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_toRightOf="@+id/daily_distance_title"/>
    </RelativeLayout>
    
	<RelativeLayout
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/daily_cost_title"
		    android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_centerVertical="true"
		    android:text="@string/daily_cost_title"/>
        <TextView 
		    android:id="@+id/daily_cost" 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_toRightOf="@+id/daily_cost_title"/>
    </RelativeLayout>
	
</LinearLayout>